# mock-host

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  build.ps1  readme.md  vcpkg-configuration.json  vsdevshell.ps1
.github/workflows/: cmake-multi-platform.yml
include/: HostAPI.h  Mutex.h  export.h  mutex.h  thread.h
src/: HostAPI.cpp  Mutex.cpp  Thread.cpp
unittests/: CMakeLists.txt  test.cpp
